force-app/main/default/objects/Alert_Configuration__c/Alert_Configuration__c.object-meta.xml
<CustomObject>
    <label>Alert Configuration__c</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alert Configuration__cs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>