force-app/main/default/objects/Alert_Configuration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active _c</label>
    <type>Checkbox</type>
</CustomField>