force-app/main/default/objects/Alert_Configuration__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>