force-app/main/default/objects/Alert_Configuration__c/fields/Notification_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipients__c</fullName>
    <label>Notification Recipients__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>