force-app/main/default/objects/Alert_Configuration__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity _c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>