force-app/main/default/objects/Alert_Configuration__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value__c</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>